# DOT-Cam-Video-Archive

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
public/: api.js  app.js  index.html  style.css
src/: api.rs  auth.rs  db.rs  dvr.rs  main.rs  models.rs  recorder.rs  rtmp.rs
